2020-05-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.3-alpha09 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.3-alpha09: Rib Eye';git push
	git tag -a 4.9.3-alpha09 -m 'ncap2 ess_rmt demo;ncks cmp vrs clang;';git push --tags

	* ncks change --var_val to --val_var to avoid getop() abbreviation ambiguity with --var

2020-05-19  Charlie Zender  <zender@uci.edu>

	* Construct and identify clang and GCC compiler library numeric versions

2020-05-18  Charlie Zender  <zender@uci.edu>

	* Insert first GPU directives, modified from Dhruv Seth

2020-05-17  Charlie Zender  <zender@uci.edu>

	* Improve ncap2 planck.nco demo for ESS 138

	* ncap2 print usage when invoked without any options or arguments

2020-05-13  Charlie Zender  <zender@uci.edu>

	* Change default build from clang-9.0 to clang-10

	* Correctly identify modern clang compiler versions

2020-05-02  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.3-alpha08 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.3-alpha08: Olive Bread';git push
	git tag -a 4.9.3-alpha08 -m 'nco_get_att() NC_ENOTATT branch; ncclimo inp_glb w/sbs_flg';git push --tags

	* ncclimo/ncremap always check that user-specified drc_in exists for all input types

2020-05-01  Charlie Zender  <zender@uci.edu>

	* ncclimo/ncremap warn when input directory for globbing DNE

	* ncclimo simplify and disambiguate determination of sbs_flg and inp_glb

2020-04-30  Charlie Zender  <zender@uci.edu>

	* ncclimo allow clm_md='hf' to use input from globbing directory when inp_glb='Yes'

	* ncremap when inp_psn='Yes', set std_chk='No'

	* ncremap clean-up unique suffix algorithm

2020-04-29  Charlie Zender  <zender@uci.edu>

	* Clarify hyperslabbing syntax for integer-valued coordinates

	* Print var_id, var_nm, att_nm when nco_get_att() returns NC_ENOTATT

2020-04-22  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.3-alpha07 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.3-alpha07: Squidgy Squeegy Squishy';git push