@@ -18,6 +18,7 @@
 #include <math.h> /* sin cos cos sin 3.14159 */
 #include <stdio.h> /* stderr, FILE, NULL, printf */
 #include <stdlib.h> /* atof, atoi, malloc, getopt */
+#include <time.h> /* machine time */
 
 /* 3rd party vendors */
 #include <netcdf.h> /* netCDF definitions and C library */
